structur HTML and CSS

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <!--service-->
       <section id="services">
         <h2>Services</h2>
-        <div class="card">
-            <div>
+        <div class="card1">
+            <div class="text0">
                 <h3>Web design</h3>
                 <p>Creating visually appealing and responsive website designs tailored to your brand.</p>
             </div>
@@ -56,8 +56,8 @@
             </div>
         </div>
 
-        <div class="card">
-            <div>
+        <div class="card2">
+            <div class="text1">
             <h3>Front-end development</h3>
             <p>Implementing designs using HTML, CSS, and JavaScript to create interactive and dynamic websites.</p>
         </div>
@@ -66,8 +66,8 @@
             </div>
         </div>
 
-        <div class="card">
-            <div> 
+        <div class="card3">
+            <div class="text2"> 
             <h3>website maintenance</h3>
             <p>Providing ongoing support and updates to ensure your website remains functional and secure.</p>
             </div>
@@ -85,6 +85,7 @@
                 <li> <a href="#">Home</a></li>
                 <li> <a href="#"> about</a></li>
                 <li> <a href="#">Service</a></li>
+                <li> <a href="#">contact</a></li>
             </ul>
         </nav>
         <p>© 2025 My Web Portfolio. All rights reserved.</p>
